bad/2020-07-06/15-31/57.0/build.err
run.c: In function ‘mummy’:
run.c:9:5: error: expected ‘,’ or ‘;’ before ‘while’
     while (chaine[i]!='\0')
     ^~~~~